# BioHub

./: LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: default.yaml
data/: README.md
notebooks/: EDA_rohith.ipynb
scripts/: download_data.sh  run_pipeline.py
src/biohub/: __init__.py
src/biohub/detection/: detector.py
src/biohub/evaluation/: metrics.py
src/biohub/io/: geff_io.py  zarr_io.py
src/biohub/submission/: build_submission.py
src/biohub/tracking/: division.py  linker.py
tests/: test_evaluation.py  test_io.py  test_tracking.py
