[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biohub"
version = "0.1.0"
description = "3D+time cell detection, tracking, and lineage reconstruction for zebrafish embryo microscopy."
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
